# Wisielec-SK2

./: README.md  gra_wisielec.sln  imie.txt  jedzenie.txt  roslina.txt  rzecz.txt  sport.txt  zawod.txt  zwierze.txt
END/: README.txt
END/Client/: CMakeCache.txt  CMakeLists.txt  Makefile  cli  client.cpp  cmake_install.cmake
END/Serwer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ser  serwer.cpp
END/Serwer/files/: miasto.txt  panstwo.txt  tworzenie_wisielca.txt
EPOLL_NA_NOWO/: CMakeCache.txt  CMakeLists.txt  Makefile  cli  client.cpp  cmake_install.cmake  main  ser  serwer.cpp  simple_example
EPOLL_NA_NOWO/include/: message.h
EPOLL_NA_NOWO/source/: mes  message.cpp
gra_wisielec/: gra_wisielec.vcxproj
gra_wisielec/Debug/: gra_wisielec.exe.recipe
gra_wisielec/Debug/gra_wisielec.tlog/: gra_wisielec.lastbuildstate
gra_wisielec/x64/Debug/: gra_wisielec.exe.recipe
gra_wisielec/x64/Debug/gra_wisielec.tlog/: gra_wisielec.lastbuildstate
pracapraca/: cli  client.cpp  ser  serwer.cpp  wisielec.cpp
